# yolov7_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
class_labels/: berkeley.txt  ycb_objects.txt
launch/: yolov7.launch
scripts/: detect_ros.py
src/: detect_ros.py
src/yolov7_ros/: __init__.py
src/yolov7_ros/models/: __init__.py  common.py
src/yolov7_ros/utils/: __init__.py
src/yolov7_ros/utils/aws/: __init__.py
src/yolov7_ros/utils/wandb_logging/: __init__.py
