<?xml version="1.0"?>
<package format="2">
  <name>yolov7_ros</name>
  <version>0.0.0</version>
  <description>The yolov7_ros package</description>

  <maintainer email="ros@todo.todo">ros</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <exec_depend>geometry_msgs</exec_depend> 
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

</package>
