<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov7_ros</name>
  <version>0.0.0</version>
  <description>The yolov7_ros package</description>

  <maintainer email="ros@todo.todo">ros</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <exec_depend>geometry_msgs</exec_depend> 
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pytorch-pip</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-seaborn</exec_depend>
  <exec_depend>python3-thop-pip</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

</package>
